fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
 @import "tailwindcss";
 @plugin "@tailwindcss/typography";
 @plugin "daisyui";
+
+body {
+    overflow: hidden;
+}
